# exoweave

./: .gitignore  README.md  pyproject.toml
notebooks/: Jupiter-like fuzzy vs solid.ipynb  evaluate_models.ipynb  explainer.ipynb  plot_model.ipynb  sub-neptune test.ipynb  test_exoweave.ipynb  test_grid.ipynb  test_resolution_pt.ipynb  test_tint.ipynb
outputs/: master_grid_catalog.csv
scripts/: compile_grid.py  make_grid.sbatch  patch_pkl_photometry.py  patch_pkl_tint.py  repair_cooling_rates.py  repair_pkl_photometry.py  run_grid.py
src/exoweave/: __init__.py  cli.py  coupler.py  io.py  physics.py  profile.py
