[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exoweave"
version = "0.1.0"
description = "Coupler for ExoREM atmospheres and FuzzyCore planetary interiors."
readme = "README.md"
authors = [
    { name = "Christian Wilkinson" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0"
    # Note: exowrap and fuzzycore are intentionally omitted here 
    # because our custom CLI 'init' command handles cloning and 
    # installing them as editable local packages!
]

[project.scripts]
# This tells pip to create a terminal command called 'exoweave' 
# and point it to the main() function in cli.py
exoweave = "exoweave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["exoweave*"]